a new cv by shan lu
a new cv by shan lu

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@ layout: default
             <div class="banner-main-home">                                
                 <div class="banner-main-home-text">
                     <div class="heading">
-                        <h1>ACCORD</h1>
-                        <p class="text-uppercase">Proin gravida nibhISI</p>
+                        <h1>Shan LU</h1>
+                        <p class="text-uppercase">Urbaniste,Architecte-Urbaniste</p>
                     </div>
                     <div class="desc">
-                        <p>This is free Bootstrap v3.3.6 website theme brought to you by templatemo. Feel free to use it. Please tell your friends about it. Images are provided by <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
-                        <button type="button" class="">SAGITIS SELIT</button>
+                        <p>10 ans d’expérience dans le domaine de l’urbanisme en Asie et en France, j’ai acquis la
+                            maîtrise parfaites des projets VRD et mené avec professionnalisme des projets immobiliers.
+                            Une forte capacité d’analyses spatiales et d’analyses de financement avec QGIS et CAD(BIM). 
+                            L’expérience à l’international, participé au projet urbain des JO Beijing 2008 et Paris 2024.
+                            Étudiante en master 2 de l’Université Paris X, spécialité Fabrique de la ville et opérations d’habitat. <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
+                        <button type="button" class="">Télécharger CV</button>
                     </div>
                 </div>
                 <img src="assets/images/home-img-1.png" alt="Image" class="img-responsive">
