--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ layout: default
                             maîtrise parfaites des projets VRD et mené avec professionnalisme des projets immobiliers.
                             Une forte capacité d’analyses spatiales et d’analyses de financement avec QGIS et CAD(BIM). 
                             L’expérience à l’international, participé au projet urbain des JO Beijing 2008 et Paris 2024.
-                            Étudiante en master 2 de l’Université Paris X, spécialité Fabrique de la ville et opérations d’habitat. <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> (free photo website). Icons are from Smashing Magazine.</p>
-                        <button type="button" class="">Télécharger CV</button>
+                            Étudiante en master 2 de l’Université Paris X, spécialité Fabrique de la ville et opérations d’habitat.</p>
+                        <button href="assets/resume.pdf" type="button" class="btn-rounded-white">Télécharger CV</button>
+                      
                     </div>
                 </div>
                 <img src="assets/images/home-img-1.png" alt="Image" class="img-responsive">
