ADD NEW IMFORMATION
ADD NEW IMFORMATION

--- a/about.html
+++ b/about.html
@@ -10,17 +10,18 @@ layout: default
                 <div class="banner-main-about-text">
                     <div class="heading2">
                         <p>WELCOME TO</p>
-                        <h1>ACCORD</h1>
+                        <h1>Shan LU</h1>
                     </div>
                     <div class="desc2">
                         <ul>
-                            <li>This is free Bootstrap theme by templatemo.</li>
-                            <li>Proin gravida nibh vel velit.</li>
-                            <li>Aenean sollicitudin lorem quis.</li>
-                            <li>bibendum auctor, nisi elitnsequat ipsum.</li>
-                            <li>nec sagittis sem nibh id elit.</li>
+                            <li>10 ans d’expérience dans le domaine de l’urbanisme en Asie et en France, j’ai acquis la
+                                maîtrise parfaites des projets VRD et mené avec professionnalisme des projets immobiliers.
+                                Une forte capacité d’analyses spatiales et d’analyses de financement avec QGIS et CAD(BIM). 
+                                L’expérience à l’international, participé au projet urbain des JO Beijing 2008 et Paris 2024.
+                                Étudiante en master 2 de l’Université Paris X, spécialité Fabrique de la ville et opérations d’habitat.
+    
                         </ul>
-                        <button type="button" class="">SAGITIS SELIT</button>
+                       
                     </div>
                 </div>
                 <img src="assets/images/about-img-1.png" alt="Image" class="img-responsive">
