--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
                             Une forte capacité d’analyses spatiales et d’analyses de financement avec QGIS et CAD(BIM). 
                             L’expérience à l’international, participé au projet urbain des JO Beijing 2008 et Paris 2024.
                             Étudiante en master 2 de l’Université Paris X, spécialité Fabrique de la ville et opérations d’habitat.</p>
-                        <button href="assets/resume.pdf" type="button" class="btn-rounded-white">Télécharger CV</button>
+                        <button type="button" class="btn-rounded-white">Télécharger CV</button>
                       
                     </div>
                 </div>
@@ -37,13 +37,13 @@ layout: default
                 </div>
                 <div class="info float-container">
                     <div class="col-sm-12 london-title">
-                        <h3 class="text-uppercase">Proin gravida nibhvel</h3>
-                        <h4 class="text-uppercase">mauris vitae erat</h4>
+                        <h3 class="text-uppercase">Projet</h3>
+                        <h4 class="text-uppercase">Projet urbain</h4>
                     </div>
                     <p>Sean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. </p><hr />
                     <div class="col-sm-12 location-main"> 
                         <div class="pull-left location">
-                            <i class="fa fa-map-marker fa-2x"></i><span>LONDON</span>
+                            <i class="fa fa-map-marker fa-2x"></i><span>CHINE</span>
                         </div>
                         <div class="pull-right user-icons">
                             <a href="#"><i class="fa fa-star fa-2x"></i></a>
